# Homework_webpython_12

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/database/: connector.py  models.py
src/repository/: contacts.py  notes.py  users.py
src/routes/: contacts.py  notes.py
